--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -3,9 +3,11 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
+  <%= f.label :genre_name %>
+  <%= f.text_field :genre_name %>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
   <br />
 
   <%= f.submit %>
 <% end %>
-
-
